add userInfo
